[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Ship01.png" type="Texture" id=1]
[ext_resource path="res://Scenes/PlayerRoot.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Bullet01.png" type="Texture" id=3]
[ext_resource path="res://Scenes/PlyrBullet.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=4]
radius = 3.5

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.1
bounce = 0.4

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 240 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 283.605 )

[node name="LevelRoot" type="Node2D"]

[node name="PlyrBulletTemplate" type="KinematicBody2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 4
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="PlyrBulletTemplate"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlyrBulletTemplate"]
shape = SubResource( 4 )

[node name="PlayerRoot" type="RigidBody2D" parent="."]
position = Vector2( 128, 128 )
collision_mask = 4
physics_material_override = SubResource( 1 )
linear_damp = 1.0
angular_damp = 1.5
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerRoot"]
polygon = PoolVector2Array( -11, 0, -5, -13.5, 5, -13.5, 11, 0, 9, 11, 4.5, 11, 3, 4.893, -3, 4.893, -4.5, 11, -9, 11 )

[node name="Sprite" type="Sprite" parent="PlayerRoot"]
texture = ExtResource( 1 )

[node name="GunLeft" type="Node2D" parent="PlayerRoot"]
position = Vector2( -6.75, 12 )
rotation = 3.14159

[node name="GunRight" type="Node2D" parent="PlayerRoot"]
position = Vector2( 6.75, 12 )
rotation = 3.14159

[node name="Cave" type="Node2D" parent="."]

[node name="TempWallLeft" type="StaticBody2D" parent="Cave"]
collision_layer = 4
collision_mask = 3

[node name="ColorRect" type="ColorRect" parent="Cave/TempWallLeft"]
margin_right = 40.0
margin_bottom = 483.0
rect_pivot_offset = Vector2( 32.2996, 483 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cave/TempWallLeft"]
position = Vector2( 20.1587, 240.015 )
shape = SubResource( 2 )

[node name="TempWallRight" type="StaticBody2D" parent="Cave"]
position = Vector2( 599.722, 1.88988 )
collision_layer = 4
collision_mask = 3

[node name="ColorRect" type="ColorRect" parent="Cave/TempWallRight"]
margin_right = 40.0
margin_bottom = 483.0
rect_pivot_offset = Vector2( 32.2996, 483 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cave/TempWallRight"]
position = Vector2( 20.1587, 240.015 )
shape = SubResource( 2 )

[node name="TempWallTop" type="StaticBody2D" parent="Cave"]
position = Vector2( 556.885, 0 )
rotation = 1.5708
scale = Vector2( 1.25, 1 )
collision_layer = 4
collision_mask = 3

[node name="ColorRect" type="ColorRect" parent="Cave/TempWallTop"]
margin_top = -43.0
margin_right = 40.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 32.2996, 483 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cave/TempWallTop"]
position = Vector2( 20.1587, 240.015 )
shape = SubResource( 3 )

[node name="TempWallBottom" type="StaticBody2D" parent="Cave"]
position = Vector2( 556.885, 440 )
rotation = 1.5708
scale = Vector2( 1.25, 1 )
collision_layer = 4
collision_mask = 3

[node name="ColorRect" type="ColorRect" parent="Cave/TempWallBottom"]
margin_top = -43.0
margin_right = 40.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 32.2996, 483 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cave/TempWallBottom"]
position = Vector2( 20.1587, 240.015 )
shape = SubResource( 3 )
